--- a/granger/Makefile
+++ b/granger/Makefile
@@ -13,12 +13,18 @@ CXXFLAGS = -Wall -O3 -I/usr/local/include
 granger: $(TEMPDIR)/main.o
 	g++ -lgsl -lm -lgslcblas -o granger $(TEMPDIR)/main.o $(TEMPDIR)/olav.o
 
+globalgranger: $(TEMPDIR)/global.o
+	g++ -lgsl -lm -lgslcblas -o globalgranger $(TEMPDIR)/global.o $(TEMPDIR)/olav.o
+
 $(TEMPDIR)/main.o: main.cpp $(TEMPDIR)/olav.o
 	g++ -c $(CXXFLAGS) -o $(TEMPDIR)/main.o main.cpp
+
+$(TEMPDIR)/global.o: global.cpp $(TEMPDIR)/olav.o
+	g++ -c $(CXXFLAGS) -o $(TEMPDIR)/global.o global.cpp
 
 $(TEMPDIR)/olav.o: ../../Simulationen/olav.cpp
 	g++ -c $(CXXFLAGS) -o $(TEMPDIR)/olav.o ../../Simulationen/olav.cpp
 
 .PHONY: clean
 clean:
-	rm -f $(TEMPDIR)/*.o granger
+	rm -f $(TEMPDIR)/*.o granger globalgranger
