TE-Global-Sim hinzugefügt, Bin-Anzahl für globales Signal aber noch nicht variabel

--- a/transferentropy-sim/Makefile
+++ b/transferentropy-sim/Makefile
@@ -9,7 +9,6 @@ MAKETEMP_PATH = ./maketemp
 
 # single or parallel
 MPI = off
-EXE = transferentropy-sim
 
 ifeq ($(MPI), on)
 CC     = mpic++
@@ -21,7 +20,7 @@ CFLAGS = -O3
 endif
 
 LDFLAGS  = -lgsl -lm -L.
-OBJ  = $(MAKETEMP_PATH)/olav.o $(MAKETEMP_PATH)/main.o $(MAKETEMP_PATH)/expression.o $(MAKETEMP_PATH)/expression_basic.o $(MAKETEMP_PATH)/expression_sim.o $(MAKETEMP_PATH)/expression_extra.o $(MAKETEMP_PATH)/expression_parser.o $(MAKETEMP_PATH)/sim_io_manager.o $(MAKETEMP_PATH)/sim_io.o $(MAKETEMP_PATH)/sim_signals.o $(MAKETEMP_PATH)/sim.o
+OBJ  = $(MAKETEMP_PATH)/olav.o $(MAKETEMP_PATH)/expression.o $(MAKETEMP_PATH)/expression_basic.o $(MAKETEMP_PATH)/expression_sim.o $(MAKETEMP_PATH)/expression_extra.o $(MAKETEMP_PATH)/expression_parser.o $(MAKETEMP_PATH)/sim_io_manager.o $(MAKETEMP_PATH)/sim_io.o $(MAKETEMP_PATH)/sim_signals.o $(MAKETEMP_PATH)/sim.o
 
 EXPRH = $(SIM_PATH)/expression.h $(SIM_PATH)/expression_basic.h $(SIM_PATH)/expression_sim.h $(SIM_PATH)/expression_extra.h $(SIM_PATH)/expression_parser.h
 SIMH =  $(SIM_PATH)/sim.h $(SIM_PATH)/sim_io.h $(SIM_PATH)/sim_signals.h $(SIM_PATH)/sim_control.h $(SIM_PATH)/sim_io_manager.h 
@@ -40,13 +39,22 @@ $(MAKETEMP_PATH)/%.o : $(SIM_PATH)/%.cpp
 
 $(MAKETEMP_PATH)/%.o : %.cpp
 	$(CC) -c $(CFLAGS) $< -o $@
+	
+.PHONY: all 
+	all: transferentropy-sim te-global-sim
 
-all : $(OBJ)
-	$(CC) $(CFLAGS) $(OBJ) -o $(EXE) $(LDFLAGS)
+transferentropy-sim : $(OBJ) $(MAKETEMP_PATH)/main.o
+	$(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/main.o -o transferentropy-sim $(LDFLAGS)
+
+te-global-sim : $(OBJ) $(MAKETEMP_PATH)/te-global.o
+	$(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/te-global.o -o te-global-sim $(LDFLAGS)
+
 
 # Dependencies
 
 $(MAKETEMP_PATH)/main.o : main.cpp $(EXPRH) $(SIMH) $(MAKETEMP_PATH)/olav.o
+$(MAKETEMP_PATH)/te-global.o : te-global.cpp $(EXPRH) $(SIMH) $(MAKETEMP_PATH)/olav.o
+
 $(MAKETEMP_PATH)/sim.o : $(SIM_PATH)/sim.cpp $(SIMH)
 $(MAKETEMP_PATH)/sim_io.o : $(SIM_PATH)/sim_io.cpp $(SIM_PATH)/sim_io.h 
 $(MAKETEMP_PATH)/sim_mpi.o : $(SIM_PATH)/sim_mpi.cpp $(SIM_PATH)/sim_mpi.h
@@ -64,5 +72,5 @@ $(MAKETEMP_PATH)/olav.o: ../../Simulationen/olav.cpp
 
 
 clean:
-	rm -f $(EXE) maketemp/* maketemp/*~
+	rm -f transferentropy-sim te-global-sim maketemp/* maketemp/*~
 
