--- a/transferentropy-sim/Makefile
+++ b/transferentropy-sim/Makefile
@@ -19,7 +19,7 @@ CFLAGS = -O3
 # -O2 
 endif
 
-LDFLAGS  = -lgsl -lm -L.
+LDFLAGS  = -lgslcblas -lgsl -lm -L.
 OBJ  = $(MAKETEMP_PATH)/olav.o $(MAKETEMP_PATH)/expression.o $(MAKETEMP_PATH)/expression_basic.o $(MAKETEMP_PATH)/expression_sim.o $(MAKETEMP_PATH)/expression_extra.o $(MAKETEMP_PATH)/expression_parser.o $(MAKETEMP_PATH)/sim_io_manager.o $(MAKETEMP_PATH)/sim_io.o $(MAKETEMP_PATH)/sim_signals.o $(MAKETEMP_PATH)/sim.o
 
 EXPRH = $(SIM_PATH)/expression.h $(SIM_PATH)/expression_basic.h $(SIM_PATH)/expression_sim.h $(SIM_PATH)/expression_extra.h $(SIM_PATH)/expression_parser.h
