SimKernel-Bibliotheken sind jetzt auf SourceForge, deshalb aus diesem Repository raus genommen und Makefiles entspr. angepasst

--- a/granger-sim/Makefile
+++ b/granger-sim/Makefile
@@ -3,7 +3,7 @@
 # ----------------------------------- #
 
 # path to Sim libraries
-SIM_PATH = ../../Simulationen/SimKernel
+SIM_PATH = ../../../Sonstiges/SimKernel
 # path to object files
 MAKETEMP_PATH = ./maketemp
 
