GTE: Conditioning weiter eingeführt, und te-extended hinzugefügt mit vaiabler Markov-Ordnung in Quellen- und Ziel-Term, außerdem Flags eingeführt, so dass nicht benötigter Code gar nicht erst kompiliert wird

--- a/transferentropy-sim/Makefile
+++ b/transferentropy-sim/Makefile
@@ -84,5 +84,5 @@ $(MAKETEMP_PATH)/olav.o: ../../Simulationen/olav.cpp
 
 
 clean:
-	rm -f transferentropy te-global te-separated te-extendend te-iterated maketemp/* maketemp/*~
+	rm -f transferentropy te-global te-separated te-extendend te-iterated maketemp/*
 
