GTE: Endlich Warnung eingebaut, falls die AUsgabe-Dateien nicht geöffnet werden können

--- a/transferentropy-sim/Makefile
+++ b/transferentropy-sim/Makefile
@@ -10,7 +10,7 @@ MAKETEMP_PATH = ./maketemp
 # Georgs debugging:
 # CFLAGS plus -g
 
-# debugger ddd
+# debugger ddd (or gdb on Mac OSX)
 # valgrind --tool=memcheck ./prog
 
 
