Fehler in GTE-Programmen behoben, die zum Abbruch beim Speichern führten (Fehler beim Datei-Öffnen)

--- a/transferentropy-sim/Makefile
+++ b/transferentropy-sim/Makefile
@@ -94,5 +94,5 @@ $(MAKETEMP_PATH)/olav.o: ../../Simulationen/olav.cpp
 
 
 clean:
-	rm -f transferentropy te-global te-separated te-extendend te-iterated maketemp/*
+	rm -f transferentropy te-global te-separated te-extended te-iterated maketemp/*
 
