Beide NN-Estimator-Varianten hinzugefügt

--- a/transferentropy-sim/Makefile
+++ b/transferentropy-sim/Makefile
@@ -22,8 +22,8 @@ CC     = mpic++
 CFLAGS = -DSIM_MPI -O3
 else
 CC     = g++
-CFLAGS = -O3
-# CFLAGS = -g
+# CFLAGS = -O3
+CFLAGS = -g
 endif
 
 LDFLAGS  = -lgslcblas -lgsl -lm -L.
@@ -64,8 +64,11 @@ te-global : $(OBJ) $(MAKETEMP_PATH)/te-global.o
 te-extended : $(OBJ) $(MAKETEMP_PATH)/te-extended.o
 	$(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/te-extended.o -o te-extended $(LDFLAGS) $(LDFLAGS_YAML)
 
-te-binless : $(OBJ) $(MAKETEMP_PATH)/te-binless.o
-	$(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/te-binless.o -o te-binless $(LDFLAGS) $(LDFLAGS_YAML) $(LDFLAGS_FLANN)
+te-binless-Kraskov : $(OBJ) $(MAKETEMP_PATH)/te-binless-Kraskov.o
+	$(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/te-binless-Kraskov.o -o te-binless-Kraskov $(LDFLAGS) $(LDFLAGS_YAML) $(LDFLAGS_FLANN)
+
+te-binless-Leonenko : $(OBJ) $(MAKETEMP_PATH)/te-binless-Leonenko.o
+	$(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/te-binless-Leonenko.o -o te-binless-Leonenko $(LDFLAGS) $(LDFLAGS_YAML) $(LDFLAGS_FLANN)
 
 te-extended-localcond : $(OBJ) $(MAKETEMP_PATH)/te-extended-localcond.o
 	$(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/te-extended-localcond.o -o te-extended-localcond $(LDFLAGS)
@@ -85,7 +88,8 @@ xcorr : $(OBJ) $(MAKETEMP_PATH)/xcorr.o
 $(MAKETEMP_PATH)/main.o : main.cpp $(EXPRH) $(SIMH) $(MAKETEMP_PATH)/olav.o
 $(MAKETEMP_PATH)/te-global.o : te-global.cpp $(EXPRH) $(SIMH) $(MAKETEMP_PATH)/olav.o
 $(MAKETEMP_PATH)/te-extended.o : te-extended.cpp $(EXPRH) $(SIMH) $(MAKETEMP_PATH)/olav.o
-$(MAKETEMP_PATH)/te-binless.o : te-binless.cpp $(EXPRH) $(SIMH) $(MAKETEMP_PATH)/olav.o
+$(MAKETEMP_PATH)/te-binless-Kraskov.o : te-binless-Kraskov.cpp $(EXPRH) $(SIMH) $(MAKETEMP_PATH)/olav.o
+$(MAKETEMP_PATH)/te-binless-Leonenko.o : te-binless-Leonenko.cpp $(EXPRH) $(SIMH) $(MAKETEMP_PATH)/olav.o
 $(MAKETEMP_PATH)/te-extended-localcond.o : te-extended-localcond.cpp $(EXPRH) $(SIMH) $(MAKETEMP_PATH)/olav.o
 $(MAKETEMP_PATH)/te-separated.o : te-extended.cpp $(EXPRH) $(SIMH) $(MAKETEMP_PATH)/olav.o
 $(MAKETEMP_PATH)/te-iterated.o : te-iterated.cpp $(EXPRH) $(SIMH) $(MAKETEMP_PATH)/olav.o
@@ -110,5 +114,5 @@ $(MAKETEMP_PATH)/te-datainit.o: ../te-datainit.cpp
 
 
 clean:
-	rm -f transferentropy te-global te-separated te-extended te-binless te-extended-localcond te-iterated xcorr maketemp/*
+	rm -f transferentropy te-global te-separated te-extended te-binless-Kraskov te-binless-Leonenko te-extended-localcond te-iterated xcorr maketemp/*
 	rm -rf *.dSYM
