GTE: Neue Version des MutualInformation-Programms hinzugefügt, diesmal auf te-extended-multidim aufbauend, plus Kleinigkeiten

--- a/transferentropy-sim/Makefile
+++ b/transferentropy-sim/Makefile
@@ -1,5 +1,5 @@
 # ----------------------------------- #
-# Makefile for Sim                    #
+# Makefile for Sim										#
 # ----------------------------------- #
 
 # path to Sim libraries
@@ -18,21 +18,21 @@ MAKETEMP_PATH = ./maketemp
 MPI = off
 
 ifeq ($(MPI), on)
-CC     = mpic++
+CC		 = mpic++
 CFLAGS = -DSIM_MPI -O3
 else
-CC     = g++
-CFLAGS = -O3
-# CFLAGS = -g
+CC		 = g++
+# CFLAGS = -O3
+CFLAGS = -g
 endif
 
-LDFLAGS  = -lgslcblas -lgsl -lm -L.
+LDFLAGS	 = -lgslcblas -lgsl -lm -L.
 LDFLAGS_YAML = -lyaml-cpp
 LDFLAGS_FLANN = -lflann_cpp
 OBJBASE = $(MAKETEMP_PATH)/olav.o $(MAKETEMP_PATH)/te-datainit.o $(MAKETEMP_PATH)/expression.o $(MAKETEMP_PATH)/expression_basic.o $(MAKETEMP_PATH)/expression_sim.o $(MAKETEMP_PATH)/expression_extra.o $(MAKETEMP_PATH)/expression_parser.o $(MAKETEMP_PATH)/sim_io_manager.o $(MAKETEMP_PATH)/sim_io.o $(MAKETEMP_PATH)/sim_signals.o $(MAKETEMP_PATH)/sim.o
 
 EXPRH = $(SIM_PATH)/expression.h $(SIM_PATH)/expression_basic.h $(SIM_PATH)/expression_sim.h $(SIM_PATH)/expression_extra.h $(SIM_PATH)/expression_parser.h
-SIMHBASE =  $(SIM_PATH)/sim.h $(SIM_PATH)/sim_io.h $(SIM_PATH)/sim_signals.h $(SIM_PATH)/sim_control.h $(SIM_PATH)/sim_io_manager.h 
+SIMHBASE =	$(SIM_PATH)/sim.h $(SIM_PATH)/sim_io.h $(SIM_PATH)/sim_signals.h $(SIM_PATH)/sim_control.h $(SIM_PATH)/sim_io_manager.h 
 
 ifeq ($(MPI), on)
 OBJ = $(MAKETEMP_PATH)/sim_mpi.o $(OBJBASE)
@@ -44,49 +44,52 @@ endif
 
 
 %.o : %.cpp
-  $(CC) -c $(CFLAGS) $< -o $@
+	$(CC) -c $(CFLAGS) $< -o $@
 
 $(MAKETEMP_PATH)/%.o : $(SIM_PATH)/%.cpp
-  $(CC) -c $(CFLAGS) $< -o $@
+	$(CC) -c $(CFLAGS) $< -o $@
 
 $(MAKETEMP_PATH)/%.o : %.cpp
-  $(CC) -c $(CFLAGS) $< -o $@
-  
+	$(CC) -c $(CFLAGS) $< -o $@
+	
 # .PHONY: all 
-#   all: transferentropy-sim te-global-sim te-extended
+#		all: transferentropy-sim te-global-sim te-extended
 
 transferentropy : $(OBJ) $(MAKETEMP_PATH)/main.o
-  $(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/main.o -o transferentropy $(LDFLAGS)
+	$(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/main.o -o transferentropy $(LDFLAGS)
 
 te-global : $(OBJ) $(MAKETEMP_PATH)/te-global.o
-  $(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/te-global.o -o te-global $(LDFLAGS)
+	$(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/te-global.o -o te-global $(LDFLAGS)
 
 te-extended : $(OBJ) $(MAKETEMP_PATH)/te-extended.o
-  $(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/te-extended.o -o te-extended $(LDFLAGS) $(LDFLAGS_YAML)
+	$(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/te-extended.o -o te-extended $(LDFLAGS) $(LDFLAGS_YAML)
 
 te-extended-multidim : $(OBJ) $(MAKETEMP_PATH)/te-extended-multidim.o
-  $(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/te-extended-multidim.o $(MAKETEMP_PATH)/multidimarray.o -o te-extended-multidim $(LDFLAGS) $(LDFLAGS_YAML)
+	$(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/te-extended-multidim.o $(MAKETEMP_PATH)/multidimarray.o -o te-extended-multidim $(LDFLAGS) $(LDFLAGS_YAML)
+
+mi : $(OBJ) $(MAKETEMP_PATH)/mi.o
+	$(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/mi.o $(MAKETEMP_PATH)/multidimarray.o -o mi $(LDFLAGS) $(LDFLAGS_YAML)
 
 te-binless-Kraskov : $(OBJ) $(MAKETEMP_PATH)/te-binless-Kraskov.o
-  $(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/te-binless-Kraskov.o -o te-binless-Kraskov $(LDFLAGS) $(LDFLAGS_YAML) $(LDFLAGS_FLANN)
+	$(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/te-binless-Kraskov.o -o te-binless-Kraskov $(LDFLAGS) $(LDFLAGS_YAML) $(LDFLAGS_FLANN)
 
 te-binless-Leonenko : $(OBJ) $(MAKETEMP_PATH)/te-binless-Leonenko.o
-  $(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/te-binless-Leonenko.o -o te-binless-Leonenko $(LDFLAGS) $(LDFLAGS_YAML) $(LDFLAGS_FLANN)
+	$(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/te-binless-Leonenko.o -o te-binless-Leonenko $(LDFLAGS) $(LDFLAGS_YAML) $(LDFLAGS_FLANN)
 
 te-extended-localcond : $(OBJ) $(MAKETEMP_PATH)/te-extended-localcond.o
-  $(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/te-extended-localcond.o -o te-extended-localcond $(LDFLAGS)
+	$(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/te-extended-localcond.o -o te-extended-localcond $(LDFLAGS)
 
 te-separated : $(OBJ) $(MAKETEMP_PATH)/te-separated.o
-  $(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/te-separated.o -o te-separated $(LDFLAGS)
-  
+	$(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/te-separated.o -o te-separated $(LDFLAGS)
+	
 te-iterated : $(OBJ) $(MAKETEMP_PATH)/te-iterated.o
-  $(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/te-iterated.o -o te-iterated $(LDFLAGS)
+	$(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/te-iterated.o -o te-iterated $(LDFLAGS)
 
 xcorr : $(OBJ) $(MAKETEMP_PATH)/xcorr.o
-  $(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/xcorr.o -o xcorr $(LDFLAGS) $(LDFLAGS_YAML)
+	$(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/xcorr.o -o xcorr $(LDFLAGS) $(LDFLAGS_YAML)
 
 granger : $(OBJ) $(MAKETEMP_PATH)/granger.o
-  $(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/granger.o -o granger $(LDFLAGS) $(LDFLAGS_YAML)
+	$(CC) $(CFLAGS) $(OBJ) $(MAKETEMP_PATH)/granger.o -o granger $(LDFLAGS) $(LDFLAGS_YAML)
 
 
 # Dependencies
@@ -95,6 +98,7 @@ $(MAKETEMP_PATH)/main.o : main.cpp $(EXPRH) $(SIMH) $(MAKETEMP_PATH)/olav.o
 $(MAKETEMP_PATH)/te-global.o : te-global.cpp $(EXPRH) $(SIMH) $(MAKETEMP_PATH)/olav.o
 $(MAKETEMP_PATH)/te-extended.o : te-extended.cpp $(EXPRH) $(SIMH) $(MAKETEMP_PATH)/olav.o
 $(MAKETEMP_PATH)/te-extended-multidim.o : te-extended-multidim.cpp $(EXPRH) $(SIMH) $(MAKETEMP_PATH)/olav.o $(MAKETEMP_PATH)/multidimarray.o
+$(MAKETEMP_PATH)/mi.o : mi.cpp $(EXPRH) $(SIMH) $(MAKETEMP_PATH)/olav.o $(MAKETEMP_PATH)/multidimarray.o
 $(MAKETEMP_PATH)/te-binless-Kraskov.o : te-binless-Kraskov.cpp $(EXPRH) $(SIMH) $(MAKETEMP_PATH)/olav.o
 $(MAKETEMP_PATH)/te-binless-Leonenko.o : te-binless-Leonenko.cpp $(EXPRH) $(SIMH) $(MAKETEMP_PATH)/olav.o
 $(MAKETEMP_PATH)/te-extended-localcond.o : te-extended-localcond.cpp $(EXPRH) $(SIMH) $(MAKETEMP_PATH)/olav.o
@@ -116,13 +120,13 @@ $(MAKETEMP_PATH)/expression_extra.o : $(SIM_PATH)/expression_extra.cpp $(SIM_PAT
 $(MAKETEMP_PATH)/expression_parser.o : $(SIM_PATH)/expression_parser.cpp $(SIM_PATH)/expression_parser.h $(SIM_PATH)/expression.h $(SIM_PATH)/expression_basic.h $(SIM_PATH)/expression_sim.h $(SIM_PATH)/expression_extra.h
 
 $(MAKETEMP_PATH)/olav.o: ../../Simulationen/olav.cpp
-  $(CC) -c $(CFLAGS) -o $(MAKETEMP_PATH)/olav.o ../../Simulationen/olav.cpp
+	$(CC) -c $(CFLAGS) -o $(MAKETEMP_PATH)/olav.o ../../Simulationen/olav.cpp
 $(MAKETEMP_PATH)/te-datainit.o: ../te-datainit.cpp
-  $(CC) -c $(CFLAGS) -o $(MAKETEMP_PATH)/te-datainit.o ../te-datainit.cpp
+	$(CC) -c $(CFLAGS) -o $(MAKETEMP_PATH)/te-datainit.o ../te-datainit.cpp
 $(MAKETEMP_PATH)/multidimarray.o: ../multidimarray.cpp
-  $(CC) -c $(CFLAGS) -o $(MAKETEMP_PATH)/multidimarray.o ../multidimarray.cpp
+	$(CC) -c $(CFLAGS) -o $(MAKETEMP_PATH)/multidimarray.o ../multidimarray.cpp
 
 
 clean:
-  rm -f transferentropy te-global te-separated te-extended te-extended-multidim te-binless-Kraskov te-binless-Leonenko te-extended-localcond te-iterated xcorr granger maketemp/*
-  rm -rf *.dSYM ../*.dSYM
+	rm -f transferentropy te-global te-separated te-extended te-extended-multidim mi te-binless-Kraskov te-binless-Leonenko te-extended-localcond te-iterated xcorr granger maketemp/*
+	rm -rf *.dSYM ../*.dSYM
